[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/enemies/zombie_base.gd" id="1_zombie"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 150.0

[node name="ZombieBase" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_zombie")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_1")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_2")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="StateTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
